--- a/np_project.csproj
+++ b/np_project.csproj
@@ -9,7 +9,25 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Compile Remove="Models\**" />
+    <EmbeddedResource Remove="Models\**" />
+    <None Remove="Models\**" />
+    <Page Remove="Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Resources\Icons\DashB.png" />
+    <None Remove="Resources\Icons\Products.png" />
+    <None Remove="Resources\Icons\Proveedores.png" />
+    <None Remove="Resources\Icons\Reportes.png" />
+    <None Remove="Resources\Icons\Usuario.png" />
+    <None Remove="Resources\Icons\Ventas.png" />
+    <None Remove="Resources\Images\DashBoard.png" />
+    <None Remove="Resources\Images\NP.png" />
+    <None Remove="Resources\Images\Producto.png" />
+    <None Remove="Resources\Images\Reports.png" />
+    <None Remove="Resources\Images\Sales.png" />
+    <None Remove="Resources\Images\Suppliers.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +37,36 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Resources\Icons\DashB.png" />
+    <Resource Include="Resources\Icons\Products.png" />
+    <Resource Include="Resources\Icons\Proveedores.png" />
+    <Resource Include="Resources\Icons\Reportes.png" />
+    <Resource Include="Resources\Icons\Usuario.png" />
+    <Resource Include="Resources\Icons\Ventas.png" />
+    <Resource Include="Resources\Images\DashBoard.png" />
+    <Resource Include="Resources\Images\NP.png" />
+    <Resource Include="Resources\Images\Producto.png" />
+    <Resource Include="Resources\Images\Reports.png" />
+    <Resource Include="Resources\Images\Sales.png" />
+    <Resource Include="Resources\Images\Suppliers.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
